--- a/arxeio1.html
+++ b/arxeio1.html
@@ -34,11 +34,14 @@ document.getElementById("divA").style.display = "block";
 function vote(){
 if(document.getElementById("tainia1").checked){
 document.getElementById("progress1").value = document.getElementById("progress1").value + 1;
-}else if(document.getElementById("tainia2").checked){
+}
+if(document.getElementById("tainia2").checked){
 document.getElementById("progress2").value = document.getElementById("progress2").value + 1;
-}else if(document.getElementById("tainia3").checked){
+}
+if(document.getElementById("tainia3").checked){
 document.getElementById("progress3").value = document.getElementById("progress3").value + 1;
-}else if(document.getElementById("tainia4").checked){
+}
+if(document.getElementById("tainia4").checked){
 document.getElementById("progress4").value = document.getElementById("progress4").value + 1;
 }
 
